--- a/dom/css/style.css
+++ b/dom/css/style.css
@@ -8,7 +8,9 @@
     position: relative;
     background-color: yellow;
 }
-
+.wrap_buttons{
+    margin: 10px 0;
+}
 .child{
     width:50px;
     height:50px;
